<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backg"
    tools:context=".registerCu">

    <Space
        android:layout_width="match_parent"
        android:layout_height="300dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/tch"
        android:textSize="18sp"
        android:text="@string/nameofbs" />

    <EditText
        android:id="@+id/editText_name_Cu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/simplename" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/tch"
            android:textSize="18sp"
            android:layout_weight="1"
            android:text="@string/emailbs" />

        <EditText
            android:id="@+id/editText_email_cu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"

            android:inputType="textPersonName"
            android:text="@string/simpleemail" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/tch"
            android:textSize="18sp"
            android:text="@string/inputpassword"
             />

        <EditText
            android:id="@+id/editText_password_Cu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/simplepassword" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_register_cu"
            android:layout_width="wrap_content"
            android:layout_height="61dp"
            android:background="@drawable/mbtn"
            android:fontFamily="@font/tch"
            android:textSize="32dp"
            android:text="@string/registerbtn"
             />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarCu"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />


</android.widget.LinearLayout>