<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgreg"
    android:gravity="center|center_horizontal"
    tools:context=".signinCu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/emailbs" />

        <EditText
            android:id="@+id/editText_email_signin_Cu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="tttt@gmail.com" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/inputpassword" />

        <EditText
            android:id="@+id/editText_password_signin_Cu"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword"
            android:text="00000000" />
    </LinearLayout>
    <TextView
        android:id="@+id/forgetPass2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/forgetpassword"
        android:textColor="#000000"
        android:textSize="14dp">

    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_signin_Cu"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_gravity="center_vertical|center_horizontal"
            android:background="@drawable/mbtn"
            android:textSize="32dp"
            android:fontFamily="@font/tch"
            android:text="@string/signin" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarCu2"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />
</android.widget.LinearLayout>

