<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backg"
    tools:context=".profileBS">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_nameBS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_edit_profileBS"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_weight="1"
            android:background="@drawable/mbtn"
            android:fontFamily="@font/tch"
            android:text="@string/editprofile"
            android:textSize="32dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_order_cu"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_weight="1"
            android:background="@drawable/mbtn"
            android:fontFamily="@font/tch"
            android:text="@string/orderbtn"
            android:textSize="32dp" />

        <Button
            android:id="@+id/btn_checkMSG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/mbtn"
            android:fontFamily="@font/tch"
            android:text="message"
            android:textSize="32dp"
            android:visibility="gone" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_BS_out"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_weight="1"
            android:background="@drawable/mbtn"
            android:fontFamily="@font/tch"
            android:text="@string/outbtn"
            android:textSize="32dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</android.widget.LinearLayout>