<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="105dp"
    android:background="@drawable/menlst"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <android.support.v7.widget.CardView
            android:id="@+id/view2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:elevation="12dp"
            android:innerRadius="0dp"
            android:shape="ring"
            android:thicknessRatio="1.9"
            app:cardCornerRadius="40dp">

            <ImageView
                android:id="@+id/theImage"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:scaleType="centerCrop"

                android:src="@drawable/ic_face"></ImageView>
        </android.support.v7.widget.CardView>


    </LinearLayout>


    <!--<ImageButton-->
        <!--android:id="@+id/theImage"-->
        <!--android:layout_width="50dp"-->
        <!--android:layout_height="120dp"-->
        <!--android:layout_gravity="center_vertical"-->
        <!--android:layout_margin="5dp"-->
        <!--android:background="@mipmap/ic_launcher"-->
        <!--android:verticalScrollbarPosition="right"-->
        <!--android:visibility="visible" />//-->

    <Space
        android:layout_width="5dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:fontFamily="@font/tch"
        android:text="TextView"
        android:textColor="#eee"
        android:textSize="20sp" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="103dp"
        android:gravity="right"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="3dp" />

            <Button
                android:id="@+id/button_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/space"
                android:text="@string/details" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="2dp" />

            <Button
                android:id="@+id/button_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/space"
                android:text="@string/feedback" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="2dp" />

            <Button
                android:id="@+id/button_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/space"
                android:text="@string/order" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="3dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="city : "
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:visibility="gone" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="age  : "
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:visibility="gone" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Salary :"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textSalary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>